perf: correct spacing issues after running mockup generator

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,11 @@
 
 /* ----- Various styling --- */
 body {
-    /*background-image: url(/assets/images/heartleaves.jpg);
-    background-size: cover;
-    background-position: center;
-    appearance: none;*/
     height: 100vh;
     width: 100vw;
     background: url("../images/heartleaves.jpg") center center;
     background-size: cover;
+    overflow: scroll;
 }
 
 .row-gutter-fix {
@@ -85,7 +82,7 @@ body {
     background-color: #ffffa1;
 }
 
-#score-p, #result {
+#score-p {
     margin-top: 20px;
     font-family: 'Indie Flower', cursive;
     font-size: 30px;
@@ -96,8 +93,11 @@ body {
 /* ----- Results Page --- */
 
 #result {
+    margin-top: 20px;
     line-height: 55px;
-    font-size: 40px;
+    font-size: 60px;
+    font-family: 'Dongle', sans-serif;
+    letter-spacing: 2px;
 }
 
 #end-game {
@@ -115,13 +115,13 @@ body {
 
 /* ----- Media Queries --- */
 
-@media screen and (min-width: 1024px) {
-
+  @media screen and (min-width: 768px) {
     .question {
+        margin-top: 40px;
         font-size: 60px;
     }
 
-    .image {
+    #image {
         margin-top: 40px;
     }
 
@@ -129,9 +129,38 @@ body {
         font-size: 40px;
     }
 
-    #your-score {
-        font-size: 50px;
-        margin-top: 40px;
+    #your-score, #score-p {
+        font-size: 40px;
+        margin-top: 50px;
         padding: 30px 0;
+    }
+
+    #result {
+        font-size: 80px;
+        padding: 40px;
+    }
+
+    #play, #restart-btn {
+        font-size: 3rem;
+        width: 100%;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+
+    .question {
+        font-size: 70px;
+        line-height: 50px;
+    }
+
+    #your-score, #score-p {
+        font-size: 50px;
+        margin-top: 30px;
+        padding: 20px 0;
+    }
+
+    #result {
+        font-size: 100px;
+        padding: 50px;
     }
   }
